--- a/public/css/app.css
+++ b/public/css/app.css
@@ -375,3 +375,8 @@ body{
     margin: 0 !important;
     position: relative;
 }
+
+/* .sidebars{
+    background-color: #414EEB;
+    color:white !important;
+} */
